# biobear

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cz.json  docs.bash  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: build-test-release.yml  release.yml  smoke-test.yml  smoketest.py  test.yml
benchmarks/: biobear-scan.py  biopython-scan.py  results.json
python/biobear/: __init__.py  bam_reader.py  bcf_reader.py  biobear.pyi  compression.py  deprecated.py  fasta_reader.py  fastq_reader.py  genbank_reader.py  gff_reader.py  gtf_reader.py  mzml_reader.py  reader.py  session.py  vcf_reader.py
python/tests/: test_bam_reader.py  test_bcf_reader.py  test_fasta_reader.py  test_fastq_reader.py  test_genbank_reader.py  test_gff_reader.py  test_gtf_reader.py  test_mzml_reader.py  test_session.py  test_vcf_reader.py  test_version.py
python/tests/data/: BGC0000404.gbk  index.bcf  index.bcf.csi  index.vcf.gz.tbi  name_256bytes.one.bed  test-four.bed  test-three.bedd  test.bed  test.fa.bz2  test.fasta  test.fasta.fai  test.fq  test.fq.bz2  test.gff  test.gtf  test.mzML  tox_benchmark_N6512.sdf  vcf_file.vcf.gz.tbi
python/tests/data/two-cram/: rand1k.fa
src/: bam_indexed_reader.rs  bam_reader.rs  batch.rs  bcf_reader.rs  error.rs  execution_result.rs  exon_reader.rs  fasta_reader.rs  fastq_reader.rs  file_compression_type.rs  file_options.rs  genbank_reader.rs  gff_reader.rs  lib.rs  runtime.rs  session_context.rs  to_arrow.rs  vcf_reader.rs
src/bam_reader/: bam_batch.rs
src/datasources/: bam.rs  bcf.rs  bed.rs  bigwig.rs  cram.rs  fasta.rs  fastq.rs  fcs.rs  genbank.rs  gff.rs  gtf.rs  hmm_dom_tab.rs  mod.rs  mzml.rs  sam.rs  sdf.rs  vcf.rs
src/fasta_reader/: fasta_batch.rs
src/fastq_reader/: fastq_batch.rs
src/file_options/: settable_from_file_options.rs
src/genbank_reader/: genbank_batch.rs
src/gff_reader/: gff_batch.rs
src/vcf_reader/: vcf_batch.rs
