[package]
edition = "2021"
name = "biobear"
version = "0.22.7"

[lib]
crate-type = ["cdylib"]
name = "biobear"

[dependencies]
arrow = { version = "52.1.0", features = ["pyarrow"] }
datafusion = "40"
exon = { version = "0.29.1", features = ["default"] }
pyo3 = "0.21.2"
tokio = { version = "1", features = ["rt"] }
noodles = { version = "0.78", features = ["core"] }

[profile.release]
codegen-units = 1
lto = true
