[package]
edition = "2021"
name = "biobear"
version = "0.23.2"

[lib]
crate-type = ["cdylib"]
name = "biobear"

[dependencies]
arrow = { version = "52.1.0", features = ["pyarrow"] }
datafusion = "41"
exon = { version = "0.32.3", features = ["default"] }
pyo3 = "0.21.2"
tokio = { version = "1", features = ["rt"] }
noodles = { version = "0.86", features = ["core"] }

[profile.release]
codegen-units = 1
lto = true
