[package]
edition = "2021"
name = "biobear"
version = "0.23.3"

[lib]
crate-type = ["cdylib"]
name = "biobear"

[dependencies]
arrow = { version = "53.3", features = ["pyarrow"] }
datafusion = "43"
exon = { version = "0.32.4", features = ["default"] }
pyo3 = "0.22"
tokio = { version = "1", features = ["rt"] }
noodles = { version = "0.86", features = ["core"] }

[profile.release]
codegen-units = 1
lto = true
