[build-system]
build-backend = "maturin"
requires = ["maturin>=1.3.0"]

[project]
authors = [
  {name = "WHERE TRUE devs", email = "thauck+biobear@wheretrue.com"},
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyarrow>=12"]

license = {file = "LICENSE"}
name = "biobear"
readme = "README.md"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
