[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5.1"]

[project]
authors = [{ name = "WHERE TRUE devs", email = "thauck+biobear@wheretrue.com" }]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyarrow>=15"]
license = { file = "LICENSE" }
name = "biobear"
readme = "README.md"
requires-python = ">=3.9"
description = "A package for working with Bioinformatics data with SQL and Arrow"
version = "0.22.7"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
